force-app/main/default/objects/Implementation_Evidence__c/Implementation_Evidence__c.object-meta.xml
<CustomObject>
<label
  >Implementation Evidence</label><pluralLabel
  >Implementation Evidence</pluralLabel>
    <nameField><displayFormat>IEV-{00000000}</displayFormat><label
    >Evidence Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>