force-app/main/default/objects/Implementation_Evidence__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description
  >Plain Text(18), not a formal lookup - ContentDocument doesn't support
  standard custom-object lookups. Same shape as
  Partner_Document__c.Content_Document_Id__c.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>