force-app/main/default/objects/Implementation_Evidence__c/fields/Customer_Visible__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Visible</label>
    <type>Checkbox</type>
</CustomField>