force-app/main/default/objects/Implementation_Evidence__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Lookup</type>
    <referenceTo>Implementation_Milestone__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>