force-app/main/default/objects/Implementation_Evidence__c/fields/Partner_Visible__c.field-meta.xml
<CustomField>
    <fullName>Partner_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Partner Visible</label>
    <type>Checkbox</type>
</CustomField>