force-app/main/default/objects/Implementation_Evidence__c/fields/Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>