force-app/main/default/objects/Implementation_Evidence__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Evidence</relationshipLabel>
    <relationshipName>Reviewed_Evidence</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>