force-app/main/default/objects/Implementation_Evidence__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Same value shape as Partner_Document__c.Status__c.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Submitted</fullName><default>true</default><label
        >Submitted</label></value>
            <value><fullName>Under Review</fullName><default
        >false</default><label>Under Review</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label
        >Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label
        >Superseded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>