force-app/main/default/objects/Implementation_Evidence__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Evidence</relationshipLabel>
    <relationshipName>Submitted_Evidence</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>